--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ejs": "~2.5.7",
     "ejs-locals": "^1.0.2",
     "express": "~4.16.0",
+    "express-requirements": "^1.0.2",
     "http-errors": "~1.6.2",
     "mongodb": "^3.1.3",
     "mongoose": "^5.2.8",
